Fix min-width px on general forms
Caused misalignment of buttons on forms

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -246,7 +246,7 @@ main {
     margin-left: auto;
     margin-right: auto;
     width: 20vw;
-    min-width: 280px;
+    min-width: 300px;
     margin-top: 30px;
     margin-bottom: 30px;
     background-color: rgba(255, 255, 255, 0.25);
